# advanced_types

./: .clang-format  CMakeLists.txt  README.md
cmake/: advanced_types-config.cmake.in
include/advanced_types/: failure.hpp  optional.hpp  variant.hpp
